# Gunsmoke3

./: .gitignore  README.md  old.gitignore
client/: next.config.js  package-lock.json  package.json
client/components/: CameraController.js  CourtroomPrimatives.js  CourtroomScene.js  LoginButton.js  MouthViseme.js  Nameplate.js
client/context/: UserContext.js
client/gunsmoke3/: package-lock.json  package.json
client/gunsmoke3/components/: CameraController.js  CharacterLayout.js  CourtroomPrimatives.js  CourtroomScene.js  Judge.js  MouthViseme.js
client/gunsmoke3/pages/: courtroom.js  create-scene-from-transcript.js  index.js  scenes.js
client/gunsmoke3/pages/api/: all-lines.js  (+3 more)
client/gunsmoke3/utils/: fetchWithRetry.js
client/pages/: _app.js  create-scene-from-transcript.js  home.js  index.js  scenes.js
client/pages/api/: all-lines.js  audio-proxy.js  cancel-job.js  create-chapters.js  logs.js  preview-pdf.js  process-pdf.js  slack.js  upload-to-server.js
client/pages/courtroom/: [sceneId].js
client/public/: pdf.worker.js
client/utils/: firebaseClient.js  slack.js  supabase.js
ml-server/: ml-server-commands.txt  ml_server.py  pyproject.toml
server/: package-lock.json  package.json  populate_metadata_after_1000.js  server.js
server/director/: director.js
server/llm-prompts/: JD-1.txt  hernandez.txt
server/pdf-prep/: Un-4-Day-01-OCR.txt  Un-4-Day-02-OCR.txt  un-4.js
server/utils/: ffmpeg-merge-command.txt  firebaseAdmin.js  jobUtils.js  logToFirebase.js  qc-queries.txt  saveToSupabase.js  sendToSlack.js  startup.sh  supabase.js
(+4 files in other folders)
